# slack-certify-mapf

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  AUTHORS  Dockerfile  Makefile  README.md  RELEASE.md  environment.yml  noxfile.py  plot_rq1.py  plot_rq2.py  plot_rq3.py  plot_rq4.py  plot_rq5.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  ruff.toml  run_ablation.py  run_rq3_parallel.py  run_rq5_parallel.py  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  reproducibility_issue.md
.github/workflows/: ci.yml  codeql.yml  integration.yml  release.yml  smoke.yml
analysis/: __init__.py  make_figures.py  make_tables.py
analysis/plots/: __init__.py  _common.py  ablation.py  close_analogues.py  headline.py  optimality_gap.py  pareto.py  persistent.py  style.py
analysis/statistics/: __init__.py  bootstrap.py  multiple_comparison.py  wilson.py
analysis/tables/: __init__.py  _common.py  analogues_table.py  optimality_gap_table.py  runtime_table.py  status_breakdown_table.py
baselines/: README.md  _paths.py  _types.py
baselines/btpg/: README.md  wrapper.py
baselines/kottinger/: README.md  _reimpl.py  wrapper.py
baselines/kr_cbs/: README.md  wrapper.py
baselines/pr_cbs/: README.md  wrapper.py
benchmarks/: LICENSE_movingai.md  README.md  checksums.sha256  download_movingai.sh
docs/: GETTING_STARTED.md  PAPER_NUMERICAL_CLAIMS.yaml  RUN_PAPER_FROM_ZERO.md  installation.md  quickstart.md  reproducibility.md  theorems.md
experiments/: __init__.py  __main__.py
experiments/configs/: ablation_budget.yaml  ablation_ordering.yaml  ablation_solver.yaml  rq1_headline.yaml  rq2_kr_pareto.yaml  rq3_close_analogues.yaml  rq4_ilp_gap.yaml  rq5_persistent.yaml  rq5_tightness.yaml
experiments/runners/: __init__.py  _base.py  ablation_budget.py  ablation_ordering.py  ablation_solver.py  rq1_headline.py  rq2_kr_pareto.py  rq3_close_analogues.py  rq4_ilp_gap.py  rq5_persistent.py
scripts/: check_environment.py  fetch_benchmarks.sh  install_baselines.sh  repro_paper.sh  repro_smoke.sh  run_experiment.py  update_baseline_pins.sh  update_checksums.sh  validate_detect_fast.py  validate_ilp_acyclic.py  validate_ilp_acyclic_real.py  validate_paper_claims.py  validate_risk_fast.py  validate_stn.py  validate_stn_prob.py  validate_verifier_swap.py
src/slackcertify/: __init__.py  _version.py
src/slackcertify/benchmarks/: __init__.py  movingai.py  scenarios.py
src/slackcertify/certify/: __init__.py  bounded.py  certificate.py  probabilistic.py  schema.py
src/slackcertify/cli/: __init__.py  __main__.py  certify.py  pipeline.py  simulate.py
src/slackcertify/core/: __init__.py  conflict.py  plan.py  (+4 more)
tests/: conftest.py
tests/data/: claims_smoke.yaml  tiny_4x4-random-1.scen  tiny_4x4.map
tests/integration/: test_ablation_smokes.py  test_btpg_baseline.py  test_cli_help.py  test_kottinger_baseline.py  test_kr_cbs_baseline.py  test_make_figures_smoke.py  test_make_tables_smoke.py  test_pipeline_eecbs.py  test_pipeline_lacam.py  test_pr_cbs_baseline.py  test_rq1_smoke.py  test_rq1_smoke_with_real_plan.py  test_rq2_smoke.py  test_rq3_smoke.py  test_rq3_smoke_with_real_plan.py  test_rq4_smoke.py  test_rq4_smoke_with_real_plan.py  test_rq5_smoke.py  test_validate_paper_claims_smoke.py
tests/property/: conftest.py  strategies.py  test_acyclicity_invariant.py  test_adversarial_delay.py  test_certifier_simulator_agreement.py  test_delta_soundness.py  test_probabilistic_bound.py  test_probabilistic_formula_invariants.py  test_termination.py  test_wait_infeasibility.py
tests/unit/: test_bernoulli.py  test_bootstrap_input_validation.py  test_bounded.py  test_bounded_certify.py  test_budget.py  test_calibration.py  test_conflict.py  test_edge_handler.py  test_fake_solver.py  test_graph.py  test_ilp_encoding.py  test_ilp_optimality_gap.py  test_ilp_solver_small.py  test_movingai_parser.py  test_ordering.py  test_plan.py  test_probabilistic_certify.py  test_propagation.py  test_repair_batch.py  test_rollout.py  test_rq5_calibration_edge_cases.py  test_scenario_registry.py  test_solvers_base.py  test_statistics.py  test_table_generators.py  test_tpg_acyclicity.py  test_validate_paper_claims.py
(+58 files in other folders)
